# shellcheck-all

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: command_pool.rs  lib.rs  main.rs  shellcheck.rs  walk_scripts.rs
tests/: cli.rs
