[package]
name = "shellcheck-all"
description = "Run Shellcheck on all the scripts!"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
file-format = { version = "0.24.0", features = ["reader-txt"] }
ignore = { version = "0.4.22", features = ["simd-accel"] }
num_cpus = "1.16.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt", "process", "sync"] }
which = "6.0.0"
